--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -15,8 +15,8 @@ on:
   release:
     types: published
   push:
-    branches:
-      - main
+#    branches:
+#      - main
     paths:
       - '.config'
 #  schedule:
