--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -15,10 +15,10 @@ on:
   release:
     types: published
   push:
-    branches:
-      - main
-    paths:
-      - '.config'
+#    branches:
+#      - main
+#    paths:
+#      - '.config'
 #  schedule:
 #    - cron: 0 8 * * 5
 #  watch:
